[package]
name = "uxf"
version = "0.24.0"
edition = "2021"
publish = true
authors = [ "Mark Summerfield <mark@qtrac.eu>",]
include = [ "Cargo.toml", "src/**/*.rs", "examples/**/*.rs",]
description = "uxf supports the UXF plain text human readable optionally typed storage format. UXF may serve as a convenient alternative to csv, ini, json, sqlite, toml, xml, or yaml."
documentation = "https://docs.rs/uxf/latest/uxf/"
homepage = "https://github.com/mark-summerfield/uxf"
repository = "https://github.com/mark-summerfield/uxf"
readme = "README.md"
keywords = [ "parser", "database", "uxf", "serialization", "configuration",]
categories = [ "development-tools", "text-processing", "config", "parser-implementations", "database",]
license = "GPL-3.0"

[dependencies]
anyhow = "^1.0"
bitflags = "^1.3"
chrono = "^0.4"
flate2 = "^1.0"
indexmap = "^1.9"

[dependencies.reqwest]
version = "^0.11"
features = [ "blocking",]

[dependencies.clap]
version = "^4"
features = [ "derive", "wrap_help",]

[badges.maintenance]
status = "passively-maintained"

[profile.release]
strip = true
opt-level = 3
lto = true
